- minor changes
git-svn-id: https://ggpserver.svn.sourceforge.net/svnroot/ggpserver/trunk@3 6616179e-8559-40e2-96db-df1049cb590e